refactor: add config to new response helper
